<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Retro Breaker</string>
    <string name="title_activity_main">Retro Breaker</string>
    <string name="high_score">"High score: "</string>
    <string name="new_game">New game</string>
    <string name="reset_high_score">Reset high score</string>
    <string name="score">"Score: "</string>
    <string name="multiplier">"Multiplier: "</string>
    <string name="lives">"Lives: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game Over</string>
    <string name="new_high_score">"New high score: "</string>
    <string name="do_you_want_to_restart_the_game">Do you want to restart the game?</string>
    <string name="final_score">"Final score: "</string>
    <string name="difficult">"Difficult:"</string>
    <string name="explosive_brick_explanation">Explosive brick (break all bricks around it)</string>
    <string name="moveable_brick_explanation">Moveable brick (keep moving to one side to another)</string>
    <string name="hard_brick_explanation">Hard brick (need 2 hits to break it)</string>
    <string name="gray_brick">Gray brick</string>
    <string name="special_bricks">Special bricks:</string>
    <string name="red_brick">Red brick</string>
    <string name="green_brick">Green brick</string>
    <string name="ready">Ready?</string>

</resources>
