<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usp.ime.ep2.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/mainHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/high_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/resetScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_high_score" />

</TableLayout>
